[gd_scene load_steps=10 format=3 uid="uid://dhr3gsciteabi"]

[ext_resource type="Script" uid="uid://bomri5ji8l8l7" path="res://addons/godot-simple-config/OptionsMenu/OptionsMenu2D/OptionsMenu.gd" id="1_k2nku"]
[ext_resource type="Script" uid="uid://lqxninvghd2s" path="res://addons/godot-simple-config/OptionsMenu/OptionsMenu2D/OptionsTabs.gd" id="1_nq8mq"]
[ext_resource type="Theme" uid="uid://bpl14dpauieoq" path="res://addons/godot-simple-config/Themes/OptionsMenu.tres" id="1_v7to3"]
[ext_resource type="PackedScene" uid="uid://c4kcl33pkpnbw" path="res://addons/godot-simple-config/GameConfig/VideoConfig/Fields/WindowMode/WindowModeOptionButton.tscn" id="4_3eon1"]
[ext_resource type="PackedScene" uid="uid://c4csc1cqeljtm" path="res://addons/godot-simple-config/GameConfig/VideoConfig/Fields/Vsync/VsyncCheckbox.tscn" id="5_7e0kg"]
[ext_resource type="PackedScene" uid="uid://cms4n7tmjq28y" path="res://addons/godot-simple-config/GameConfig/VideoConfig/Fields/WindowResolution/WindowResolutionOptionButton.tscn" id="5_7m882"]
[ext_resource type="PackedScene" uid="uid://cv4wp6ssb5l34" path="res://addons/godot-simple-config/GameConfig/SoundConfig/Fields/BusAudioController/BusAudioController.tscn" id="7_pw74y"]
[ext_resource type="PackedScene" uid="uid://c1q5xq0ggm1rd" path="res://addons/godot-simple-config/GameConfig/BindingConfig/Fields/PlayerInputMapGrid/PlayerInputMapGrid.tscn" id="8_wg7y3"]
[ext_resource type="Script" uid="uid://dj6i8iv22a3rr" path="res://addons/godot-simple-config/GameConfig/LocalizationConfig/Fields/LanguageOptionButton/LanguageOptionButton.gd" id="9_pxde0"]

[node name="Options" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v7to3")
color = Color(0.351257, 0.434102, 0.405522, 1)
script = ExtResource("1_k2nku")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="OptionsTabs" type="TabContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 3
script = ExtResource("1_nq8mq")
tabs = Array[String](["Video", "Som", "Bindings", "Linguagem"])
margin_left = 25
margin_right = 25
margin_top = 25
margin_bottom = 25

[node name="Video" type="MarginContainer" parent="Margin/VBox/OptionsTabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_tab_index = 0

[node name="Grid" type="GridContainer" parent="Margin/VBox/OptionsTabs/Video"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 15
columns = 2

[node name="MaxFPSLabel" type="Label" parent="Margin/VBox/OptionsTabs/Video/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "Max FPS"

[node name="MaxFPSSlider" type="HSlider" parent="Margin/VBox/OptionsTabs/Video/Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="WindowModeLabel" type="Label" parent="Margin/VBox/OptionsTabs/Video/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "Window Mode"

[node name="WindowModeOptionButton" parent="Margin/VBox/OptionsTabs/Video/Grid" instance=ExtResource("4_3eon1")]
layout_mode = 2
selected = 0
popup/item_0/id = 0

[node name="WindowResolutionLabel" type="Label" parent="Margin/VBox/OptionsTabs/Video/Grid"]
unique_name_in_owner = true
layout_mode = 2
text = "Window Resolution"

[node name="WindowResolutionOptionButton" parent="Margin/VBox/OptionsTabs/Video/Grid" instance=ExtResource("5_7m882")]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="Margin/VBox/OptionsTabs/Video/Grid"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Vsync "

[node name="VsyncCheckbox" parent="Margin/VBox/OptionsTabs/Video/Grid" instance=ExtResource("5_7e0kg")]
layout_mode = 2
size_flags_horizontal = 0

[node name="Som" type="MarginContainer" parent="Margin/VBox/OptionsTabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="Margin/VBox/OptionsTabs/Som"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Margin/VBox/OptionsTabs/Som/GridContainer"]
layout_mode = 2
text = "Master"

[node name="HSlider" parent="Margin/VBox/OptionsTabs/Som/GridContainer" instance=ExtResource("7_pw74y")]
layout_mode = 2

[node name="Bindings" type="MarginContainer" parent="Margin/VBox/OptionsTabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox/OptionsTabs/Bindings"]
layout_mode = 2

[node name="GridContainer" parent="Margin/VBox/OptionsTabs/Bindings/ScrollContainer" instance=ExtResource("8_wg7y3")]
layout_mode = 2

[node name="Linguagem" type="MarginContainer" parent="Margin/VBox/OptionsTabs"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
metadata/_tab_index = 3

[node name="GridContainer" type="GridContainer" parent="Margin/VBox/OptionsTabs/Linguagem"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Margin/VBox/OptionsTabs/Linguagem/GridContainer"]
layout_mode = 2
text = "Linguagem"

[node name="LanguageOptionButton" type="OptionButton" parent="Margin/VBox/OptionsTabs/Linguagem/GridContainer"]
layout_mode = 2
script = ExtResource("9_pxde0")

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="Apply" type="Button" parent="Margin/VBox/HBox"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Apply"

[node name="GoBack" type="Button" parent="Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[connection signal="pressed" from="Margin/VBox/HBox/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Margin/VBox/HBox/GoBack" to="." method="_on_go_back_pressed"]
